--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.0",
+    "compression": "^1.7.4",
+    "connect-timeout": "^1.9.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
