--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.2.0",
+    "moment": "^2.29.1",
+    "mongoose": "^5.11.7",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
